force-app/main/default/objects/copado__Artifact__c/copado__Artifact__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>