force-app/main/default/objects/copado__Artifact__c/fields/cmcSf__Api_Version__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__Api_Version__c</fullName>
    <inlineHelpText>The api version to be used for the packaging CLI commands. If this is not specified, the default value, i.e. the api version of the Dev Hub, will be used. Specify in the format, e.g. 54.0.
Note that if Api Version has also been specified in the child Package Version, that value will be used.</inlineHelpText>
    <label>Api Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>