force-app/main/default/objects/copado__Artifact__c/fields/cmcSf__PackagePath__c.field-meta.xml
<CustomField>
    <fullName>cmcSf__PackagePath__c</fullName>
    <inlineHelpText>Use this to specify the path for creating the package. This path should be available in sfdx-project.json of your repository.</inlineHelpText>
    <label>Package Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>