force-app/main/default/objects/copado__Artifact__c/fields/copado__DefaultBranch__c.field-meta.xml
<CustomField>
    <fullName>copado__DefaultBranch__c</fullName>
    <description>Field to specify the default branch in the repository from where new packages, versions, builds, images... are created.</description>
    <inlineHelpText>Field to specify the default branch in the repository from where new packages, versions, builds, images... are created.</inlineHelpText>
    <label>Default Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>