force-app/main/default/objects/copado__Artifact__c/fields/copado__LastJobExecutionId__c.field-meta.xml
<CustomField>
    <fullName>copado__LastJobExecutionId__c</fullName>
    <label>Last Job Execution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>