force-app/main/default/objects/copado__Artifact__c/fields/copado__No_Namespace__c.field-meta.xml
<CustomField>
    <fullName>copado__No_Namespace__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the package creation with no namespace; available only for unlocked packages.</inlineHelpText>
    <label>No Namespace</label>
    <type>Checkbox</type>
</CustomField>