force-app/main/default/objects/copado__Artifact__c/fields/copado__Package_Namespace__c.field-meta.xml
<CustomField>
    <fullName>copado__Package_Namespace__c</fullName>
    <inlineHelpText>In a packaging context, a namespace prefix is a one to 15-character alphanumeric identifier that distinguishes your package from packages of other developers on AppExchange. Not required for unlocked packages.</inlineHelpText>
    <label>Package Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>