force-app/main/default/objects/copado__Artifact__c/fields/copado__Sfdc_Login_Url__c.field-meta.xml
<CustomField>
    <fullName>copado__Sfdc_Login_Url__c</fullName>
    <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
    <inlineHelpText>The login URL that the force:auth commands use. If not specified, the default is login.salesforce.com. Override the default value if you want users to authorize to a specific Salesforce instance.</inlineHelpText>
    <label>Sfdc Login Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>