force-app/main/default/objects/copado__Artifact__c/recordTypes/copado__Git_Artifact.recordType-meta.xml
<RecordType>
    <fullName>copado__Git_Artifact</fullName>
    <active>true</active>
    <description>Version Control System centric package</description>
    <label>Git Package</label>
</RecordType>