force-app/main/default/objects/copado__Artifact__c/recordTypes/copado__Package_Artifact.recordType-meta.xml
<RecordType>
    <fullName>copado__Package_Artifact</fullName>
    <active>true</active>
    <description>Salesforce Unlocked and Second-Generation Managed Package</description>
    <label>Salesforce Package</label>
</RecordType>