force-app/main/default/objects/copado__Artifact__c/recordTypes/copado__User_Story_Bundle.recordType-meta.xml
<RecordType>
    <fullName>copado__User_Story_Bundle</fullName>
    <active>true</active>
    <description>User Story Bundle</description>
    <label>User Story Bundle</label>
</RecordType>