force-app/main/default/objects/copado__Artifact__c/validationRules/cmcSf__No_Namespace_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cmcSf__No_Namespace_Validation</fullName>
    <active>true</active>
    <description>No Namespace cannot be set to true for a Managed package</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Package_Artifact&apos;   &amp;&amp;  ISPICKVAL( copado__Pipeline__r.copado__Platform__c ,&apos;SFDX&apos;)  &amp;&amp; ISPICKVAL(copado__Package_Type__c, &apos;Managed&apos;) &amp;&amp; copado__No_Namespace__c  = true</errorConditionFormula>
    <errorDisplayField>copado__No_Namespace__c</errorDisplayField>
    <errorMessage>No Namespace cannot be set to true for a Managed package</errorMessage>
</ValidationRule>