force-app/main/default/objects/copado__Artifact__c/validationRules/copado__Artifact_Repo_Control_For_Package_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Artifact_Repo_Control_For_Package_Type</fullName>
    <active>true</active>
    <description>Package Repository null control depending of Package Type</description>
    <errorConditionFormula>IF(
	AND(	
		RecordType.DeveloperName != &apos;User_Story_Bundle&apos;,
		OR(
			AND(
				ISBLANK(copado__Artifact_Repository__c), 
				(ISPICKVAL(copado__Package_Type__c, &apos;Unlocked&apos;) || ISPICKVAL(copado__Package_Type__c, &apos;Second-Generation Package&apos;))
			),
			(NOT(ISBLANK(copado__Artifact_Repository__c)) &amp;&amp; ISPICKVAL(copado__Package_Type__c, &apos;First-Generation Package&apos;) )
		)
	), true, false
)</errorConditionFormula>
    <errorDisplayField>copado__Artifact_Repository__c</errorDisplayField>
    <errorMessage>Repository relation for packages is required for Unlocked and Second Generation Packages and should be empty for First Second Generation Packages</errorMessage>
</ValidationRule>