force-app/main/default/objects/copado__Artifact__c/validationRules/copado__Name_should_not_contain_empty_space.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Name_should_not_contain_empty_space</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(Name,&apos; &apos;) &amp;&amp; RecordType.DeveloperName != &apos;User_Story_Bundle&apos;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Package name cannot contain white spaces</errorMessage>
</ValidationRule>