force-app/main/default/objects/copado__Artifact__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Package_Id__c</columns>
    <columns>copado__Artifact_Version__c</columns>
    <columns>copado__Package_Namespace__c</columns>
    <columns>copado__Package_Type__c</columns>
    <columns>copado__Artifact_Repository__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Description__c</columns>
    <columns>copado__Target_Dev_Hub_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>